--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "leaflet": "^1.9.4",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vuetify": "^3.3.17"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
